--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,40 @@
 body {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  monospace;
+}
+
+.player-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 30px;
+}
+
+p {
+  text-align: center;
+  font-size: 50px;
+}
+
+.player-card {
+  border: 1px solid black;
+  width: 300px;
+  margin: 16px;
+}
+
+.player-card h2 {
+  text-align: center;
+}
+.player-card h3 {
+  text-align: center;
 }
